@startuml Diagram de Clases

' Clases
class Model {
 clase de SQLAlchemy
}

class User {
    - username: str
    - email: str
    - password: str
}

class UserData{
    - name: str
    - firstname: str
    - lastname: str
    - phone: str
    - address: str
    - city: str
    - country: str
}

class Task {
    - name: str
    - description: str
    - start_date: str
    - deadline: str
    - priority: str
    - difficulty: str
    - state: str
}

class Team {
    - name: str
}

class Project {
    - name: str
    - description: str
    - start_date: str
    - deadline: str
    - state: str
}

class Role {
    - name: str
}

class Permission {
    - name: str
}

' Herencias
Model <|-- User
Model <|-- UserData
Model <|-- Task
Model <|-- Team
Model <|-- Project
Model <|-- Role
Model <|-- Permission

User "1" ---- "1" UserData 
User "M" ---- "N" Team
User "M" ---- "N" Task
Project "1" ---- "1" Team
Project "1" ---- "N" Task
User "M" ---- "N" Role
Role "M" ---- "N" Permission

@enduml